main/default/objects/TempNoteContent__c/TempNoteContent__c.object-meta.xml
<CustomObject>
    <label>TempNoteContent</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NoteContents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>