main/default/objects/TempNoteContent__c/fields/Error_Flag__c.field-meta.xml
<CustomField>
    <fullName>Error_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Error Flag</label>
    <type>Checkbox</type>
</CustomField>