main/default/objects/TempNoteContent__c/fields/SubmissionId__c.field-meta.xml
<CustomField>
    <fullName>SubmissionId__c</fullName>
    <label>SubmissionId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>